--- a/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
+++ b/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
@@ -2,6 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+		<RootNamespace>Phoenix.Data.Plc.AgLink</RootNamespace>
+		<AssemblyName>Phoenix.Data.Plc.AgLink.Demo</AssemblyName>
+		<Authors>Felix Leistner</Authors>
+		<Company>Little Phoenix</Company>
+		<Description>Provides plc communication via AGLink demo assemblies.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
