--- a/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
+++ b/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Monitor.Polling.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor.Polling.Test</RootNamespace>
@@ -10,10 +10,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
 		<PackageReference Include="Moq" Version="4.13.1" />
-		<PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
-		<PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+		<PackageReference Include="nunit" Version="3.12.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
