--- a/src/Plc.Test/Plc.Test.csproj
+++ b/src/Plc.Test/Plc.Test.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Moq" Version="4.13.1" />
+		<PackageReference Include="morelinq" Version="3.3.2" />
 		<PackageReference Include="nunit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
 		  <PrivateAssets>all</PrivateAssets>
