--- a/src/Plc.AgLink/Plc.AgLink.csproj
+++ b/src/Plc.AgLink/Plc.AgLink.csproj
@@ -6,7 +6,7 @@
 		<LangVersion>latest</LangVersion>
 		<AssemblyName>Phoenix.Data.Plc.AgLink</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.AgLink</RootNamespace>
-		<Version>1.0.1</Version>
+		<Version>1.1.0-beta1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -30,5 +30,19 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Plc\Plc.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="Resources\AgLink\AGL4DotNET.4.dll" />
+	</ItemGroup>
+
+	<Target Name="MovePackage" AfterTargets="Pack">
+		<Move
+			SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg"
+			DestinationFiles="$(OutputPath)..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg"
+		/>
+		<Delete
+			Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg"
+		/>
+	</Target>
 
 </Project>
