--- a/src/Plc.Mock/Plc.Mock.csproj
+++ b/src/Plc.Mock/Plc.Mock.csproj
@@ -31,4 +31,10 @@
 		<ProjectReference Include="..\Plc\Plc.csproj" />
 	</ItemGroup>
 
+	<!-- Move the created NuGet packages into another folder. -->
+	<Target Name="MovePackage" AfterTargets="Pack">
+		<Move SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg" DestinationFiles="$(OutputPath)..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg" />
+		<Delete Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg" />
+	</Target>
+
 </Project>
