--- a/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
+++ b/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
@@ -61,7 +61,6 @@
 		<None Include="Resources\AgLink\AGLink40.dll" Pack="true" PackagePath="assets\" />
 		<None Include="Resources\AgLink\AGLink40_x64.dll" Pack="true" PackagePath="assets\" />
 		<None Include="Resources\AgLink\AGLink.license" Pack="true" PackagePath="assets\" />
-		<!--<None Include="Resources\AgLink\AGLink40CfgDev0000.xml" Pack="true" PackagePath="assets\"/>-->
 	</ItemGroup>
 
 	<!-- Add a custom target to the build folder of the NuGet package. This target will copy the content of the 'assets' folder from the package into the build directory. -->
@@ -71,8 +70,13 @@
 
 	<!-- Move the created NuGet packages into another folder. -->
 	<Target Name="MovePackage" AfterTargets="Pack">
-		<Move SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg" DestinationFiles="$(OutputPath)..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg" />
-		<Delete Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg" />
+		<Move 
+			SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg"
+			DestinationFiles="$(OutputPath)..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg"
+		/>
+		<Delete
+			Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg"
+		/>
 	</Target>
 
 </Project>
