--- a/src/Plc.AgLink/Plc.AgLink.csproj
+++ b/src/Plc.AgLink/Plc.AgLink.csproj
@@ -35,10 +35,11 @@
 		<Reference Include="Resources\AgLink\AGL4DotNET.4.dll" />
 	</ItemGroup>
 
+	<!-- Move the created NuGet packages into another folder. -->
 	<Target Name="MovePackage" AfterTargets="Pack">
 		<Move
 			SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg"
-			DestinationFiles="$(OutputPath)..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg"
+			DestinationFiles="$(OutputPath)..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg"
 		/>
 		<Delete
 			Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg"
