--- a/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
+++ b/src/Plc.AgLink.Demo/Plc.AgLink.Demo.csproj
@@ -6,7 +6,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<RootNamespace>Phoenix.Data.Plc.AgLink</RootNamespace>
 		<AssemblyName>Phoenix.Data.Plc.AgLink.Demo</AssemblyName>
-		<Version>1.1.0-beta3</Version>
+		<Version>1.1.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Description>Provides plc communication via AGLink demo assemblies.</Description>
@@ -70,13 +70,8 @@
 
 	<!-- Move the created NuGet packages into another folder. -->
 	<Target Name="MovePackage" AfterTargets="Pack">
-		<Move 
-			SourceFiles="$(OutputPath)$(PackageId).$(PackageVersion).symbols.nupkg"
-			DestinationFiles="$(OutputPath)..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg"
-		/>
-		<Delete
-			Files="$(OutputPath)$(PackageId).$(PackageVersion).nupkg"
-		/>
+		<Move SourceFiles="$(BaseOutputPath)$(Configuration)\$(PackageId).$(PackageVersion).symbols.nupkg" DestinationFiles="$(BaseOutputPath)$(Configuration)\..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg" />
+		<Delete	Files="$(BaseOutputPath)$(Configuration)\$(PackageId).$(PackageVersion).nupkg" />
 	</Target>
 
 </Project>
