--- a/src/Plc.AgLink/Plc.AgLink.csproj
+++ b/src/Plc.AgLink/Plc.AgLink.csproj
@@ -6,7 +6,7 @@
 		<LangVersion>latest</LangVersion>
 		<AssemblyName>Phoenix.Data.Plc.AgLink</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.AgLink</RootNamespace>
-		<Version>2.0.0</Version>
+		<Version>2.1.0-beta1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -32,13 +32,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="⬙\AgLink\AGL4DotNET.4.dll" />
+	  <Reference Include="AGL4DotNET.4">
+	    <HintPath>⬙\AgLink\AGL4DotNET.4.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 	<!-- Move the created NuGet packages into another folder. -->
 	<Target Name="MovePackage" AfterTargets="Pack">
 		<Move SourceFiles="$(BaseOutputPath)$(Configuration)\$(PackageId).$(PackageVersion).symbols.nupkg" DestinationFiles="$(BaseOutputPath)$(Configuration)\..\..\..\..\.nuget\$(PackageId).$(PackageVersion).nupkg" />
-		<Delete	Files="$(BaseOutputPath)$(Configuration)\$(PackageId).$(PackageVersion).nupkg" />
+		<Delete Files="$(BaseOutputPath)$(Configuration)\$(PackageId).$(PackageVersion).nupkg" />
 	</Target>
 
 </Project>
