--- a/src/Plc.Implementation.Test/Plc.Implementation.Test.csproj
+++ b/src/Plc.Implementation.Test/Plc.Implementation.Test.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Implementation.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Implementation.Test</RootNamespace>
