--- a/src/Plc.Mock.Test/Plc.Mock.Test.csproj
+++ b/src/Plc.Mock.Test/Plc.Mock.Test.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Phoenix.Data.Plc.Mock.Test</RootNamespace>
 		<AssemblyName>Phoenix.Data.Plc.Mock.Test</AssemblyName>
