--- a/src/Plc.AgLink.Demo.Test/Plc.AgLink.Demo.Test.csproj
+++ b/src/Plc.AgLink.Demo.Test/Plc.AgLink.Demo.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
+		<TargetFrameworks>net5.0;netcoreapp3.0;net45</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.AgLink.Test</AssemblyName>
