--- a/src/Plc.Monitor/Plc.Monitor.csproj
+++ b/src/Plc.Monitor/Plc.Monitor.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+		<TargetFrameworks>net5.0;netstandard2.0;net45</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<AssemblyName>Phoenix.Data.Plc.Monitor</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor</RootNamespace>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Description>Interface assembly for monitoring plc items.</Description>
