--- a/src/Plc.Test/Plc.Test.csproj
+++ b/src/Plc.Test/Plc.Test.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
-		<IsPackable>false</IsPackable>
+		<TargetFrameworks>net5.0;netcoreapp3.0;net45</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
+		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Test</RootNamespace>
 		<Authors>Felix Leistner</Authors>
