--- a/src/Plc.Monitor.Polling/Plc.Monitor.Polling.csproj
+++ b/src/Plc.Monitor.Polling/Plc.Monitor.Polling.csproj
@@ -7,7 +7,7 @@
 		<LangVersion>latest</LangVersion>
 		<AssemblyName>Phoenix.Data.Plc.Monitor.Polling</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor.Polling</RootNamespace>
-		<Version>2.1.0</Version>
+		<Version>3.0.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -26,6 +26,8 @@
 		<None Include="..\..\..\nuget.png" Pack="true" PackagePath="" Link="⬙\nuget.png" />
 		<None Include="..\..\README.md" Pack="true" PackagePath="" Link="⬙\README.md" />
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="" Link="⬙\LICENSE.md" />
+		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
+		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
 	</ItemGroup>
 
 	<ItemGroup>
