--- a/src/Plc.Monitor/Plc.Monitor.csproj
+++ b/src/Plc.Monitor/Plc.Monitor.csproj
@@ -6,7 +6,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<AssemblyName>Phoenix.Data.Plc.Monitor</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor</RootNamespace>
-		<Version>2.1.0</Version>
+		<Version>3.0.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Description>Interface assembly for monitoring plc items.</Description>
@@ -25,6 +25,8 @@
 		<None Include="..\..\..\nuget.png" Pack="true" PackagePath="" Link="⬙\nuget.png" />
 		<None Include="..\..\README.md" Pack="true" PackagePath="" Link="⬙\README.md" />
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="" Link="⬙\LICENSE.md" />
+		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
+		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
 	</ItemGroup>
 
 	<ItemGroup>
