--- a/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
+++ b/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netcoreapp3.0;net45</TargetFrameworks>
+		<TargetFrameworks>net6.0;net48</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Monitor.Polling.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor.Polling.Test</RootNamespace>
