--- a/src/Plc.Monitor/Plc.Monitor.csproj
+++ b/src/Plc.Monitor/Plc.Monitor.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netstandard2.0;net45</TargetFrameworks>
+		<TargetFrameworks>net7.0;net6.0;netstandard2.0;net48</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<AssemblyName>Phoenix.Data.Plc.Monitor</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor</RootNamespace>
-		<Version>4.0.0</Version>
+		<Copyright>2023</Copyright>
+		<Version>5.0.0-beta.1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Description>Interface assembly for monitoring plc items.</Description>
