--- a/src/Plc/Plc.csproj
+++ b/src/Plc/Plc.csproj
@@ -3,6 +3,8 @@
 	<PropertyGroup>
 		<TargetFrameworks>net7.0;net6.0;netstandard2.0;netstandard2.1;net48</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<AssemblyName>Phoenix.Data.Plc</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc</RootNamespace>
