Implemented explicit usings and file scoped namespaces in Plc.Test project.

--- a/src/Plc.Test/Plc.Test.csproj
+++ b/src/Plc.Test/Plc.Test.csproj
@@ -3,6 +3,8 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net48</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Test</RootNamespace>
